experimental update allowing for reloading a class at runtime